Repo url for much win

--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "0.0.2",
   "description": "An minimal http library built on Rx and core Node libraries",
   "main": "index.js",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/jondlm/rx-http.git"
+  },
+  "bugs": {
+    "url" : "https://github.com/jondlm/rx-http/issues"
+  },
   "scripts": {
     "test": "mocha"
   },
